--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -28,6 +28,7 @@
       <div class="col-xs-12  col-md-9">
         <div id="scatter">
           <!-- We append our chart here. -->
+          <script type="text/javascript" src="./assets/js/app.js"></script>
         </div>
       </div>
     </div>
